--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "apollo-server-express": "^2.6.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "mongodb": "^4.1.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.0",
     "@types/graphql": "^14.2.1",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^12.0.10",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
+    "dotenv": "^10.0.0",
     "eslint": "^6.0.1",
     "nodemon": "^2.0.12",
     "ts-node": "^8.3.0",
