--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
+    "lodash.merge": "^4.6.2",
     "mongodb": "^4.1.0"
   },
   "devDependencies": {
@@ -14,6 +15,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.0",
     "@types/graphql": "^14.2.1",
+    "@types/lodash.merge": "^4.6.6",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^12.0.10",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
@@ -26,6 +28,7 @@
   },
   "scripts": {
     "start": "nodemon src/index.ts",
-    "build": "tsc -p ./"
+    "build": "tsc -p ./",
+    "seed": "ts-node temp/seed.ts"
   }
 }
